# rt2_assignment1

./: CMakeLists.txt  README.md  mapping_rules.yaml  package.xml
action/: GoalReaching.action
launch/: all_launch.py  sim.launch  sim2.launch
scripts/: go_to_point.py  user_interface.py
src/: position_service.cpp  state_machine.cpp
srv/: Position.srv
